export enum Estado {
    PENDIENTE,
    PLANIFICADO,
    NO_PLANIFICABLE,
    FINALIZADO,
}
